--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.9.1
 Django==5.2.4
+mysqlclient==2.2.7
 pillow==11.3.0
+python-dotenv==1.1.1
 sqlparse==0.5.3
 tzdata==2025.2
+whitenoise==6.9.0
